Refactors and enhances project structure
This commit refactors the project structure for improved maintainability and scalability.

- Updates dependencies, including Spring Boot and JWT libraries.
- Introduces security configurations and authentication filters.
- Adds a data loader for development environments, enabling the easy population of the database with test data.
- Implements role-based authorization for product management.
- Introduces filtering capabilities for products.
- Corrects Swagger endpoint URL.
- Enables repeatable read isolation level to prevent non-repeatable reads.

These changes lay the foundation for future enhancements and a more robust API.